US1314 - Fix for training plans tomahawk. Hoverbox mixin now has overflow hidden which prevented drop down options from displaying. Also fixed calendar workout and add workout cursor states.

--- a/app/scss/calendar/tabLibraries/_trainingPlans.scss
+++ b/app/scss/calendar/tabLibraries/_trainingPlans.scss
@@ -1,13 +1,12 @@
 ﻿@import "globalCSS/tpstylesheet";
 @import "globalCSS/mixIn";
 
-.trainingPlanDetails
-{
-    .hoverBoxContents
-    {
+.trainingPlanDetails {
+    
+    .hoverBoxContents {
         max-width: 330px;
+        overflow:visible !important;
     }
-
 
     .infoResults
     {
